# commonpreprocess

./: README.md
conf/: attr.fl.list  scw.conf  scw_rules.conf
data/: test1  test2  test3
src/: CMakeLists.txt  common_core.cpp  common_core.h  formater.h  run.cpp
